Add capability to set LED color (#16)

--- a/streamdeck-plugin/busylight/org.igox.busylight.sdPlugin/ui/color-config.html
+++ b/streamdeck-plugin/busylight/org.igox.busylight.sdPlugin/ui/color-config.html
@@ -25,5 +25,9 @@
                 value="getGlobalSettings()">
             </sdpi-textfield>
         </sdpi-item>
+        <sdpi-item label="Color">
+            <sdpi-color 
+            setting="color"></sdpi-color>
+        </sdpi-item>
     </body>
 </html>
