--- a/ESP32/static/index.html
+++ b/ESP32/static/index.html
@@ -2,8 +2,8 @@
 <html>
    <head>
       <title>BusyLight</title>
-      <script src="static/busylight-api.js"></script>
-      <script src="static/jscolor.min.js"></script>
+      <script src="static/libs/busylight-api.js"></script>
+      <script src="static/libs/jscolor.min.js"></script>
 
    </head>
    <body onload="initForm()">
