Stream Deck plugin v0.3.0.0 (#23)

--- a/streamdeck-plugin/busylight/org.igox.busylight.sdPlugin/ui/status-config.html
+++ b/streamdeck-plugin/busylight/org.igox.busylight.sdPlugin/ui/status-config.html
@@ -25,5 +25,14 @@
                 value="getGlobalSettings()">
             </sdpi-textfield>
         </sdpi-item>
+        <sdpi-item label="Status">
+            <sdpi-select setting="status" placeholder="Please choose a status">
+                <option value="available">Available</option>
+                <option value="away">Away</option>
+                <option value="busy">Busy</option>
+                <option value="on">On</option>
+                <option value="off">Off</option>
+            </sdpi-select>
+        </sdpi-item>
     </body>
 </html>
